# taskbar-control

./: .gitignore  README.md  create_menubar_icon.js  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: Configuration.tsx  TaskList.tsx
